--- a/client/Virtual-Farm-Market/src/components/OrderCard/OrderCard.css
+++ b/client/Virtual-Farm-Market/src/components/OrderCard/OrderCard.css
@@ -1,20 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Muli&display=swap");
-
-/* * {
-	box-sizing: border-box;
-} */
-
-/* body {
-	background-image: linear-gradient(45deg, #7175da, #9790F2);
-	font-family: 'Muli', sans-serif;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	min-height: 100vh;
-	margin: 0;
-} */
-
 .course {
   background-color: #fff;
   border-radius: 10px;
@@ -23,7 +6,7 @@
   max-width: 100%;
   margin: 20px;
   overflow: hidden;
-  width: 700px;
+  width: 800px;
 }
 
 .course h6 {
@@ -42,7 +25,8 @@
   background-color: #2a265f;
   color: #fff;
   padding: 30px;
-  max-width: 250px;
+  /* width: 350px; */
+  max-width: 280px;
 }
 
 .course-preview a {
@@ -55,7 +39,7 @@
 }
 
 .course-info {
-  padding: 30px;
+  padding: 20px;
   position: relative;
   width: 100%;
 }
