--- a/client/Virtual-Farm-Market/src/components/OrderCard/OrderCard.css
+++ b/client/Virtual-Farm-Market/src/components/OrderCard/OrderCard.css
@@ -22,7 +22,7 @@
 }
 
 .course-preview {
-  background-color: #2a265f;
+  background-color: rgba(45, 175, 45, 0.74);
   color: #fff;
   padding: 30px;
   /* width: 350px; */
